# KrakatoaForSoftimage

./: CMakeLists.txt  KrakatoaPropertyPlugin.py  KrakatoaRendererPlugin.cpp  LICENSE  README.md
CMake/Modules/: FindSoftimage.cmake
